--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -115,7 +115,7 @@
           <div class="mask text-white" style="background-color: rgba(0, 0, 0, 0.8)">
             <div class="container d-flex align-items-center text-center h-100">
               <div>
-                <h1 class="mb-5">This is title</h1>
+                <h1 class="mb-5">Cinamona</h1>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis molestiae
                   laboriosam numquam expedita ullam saepe ipsam, deserunt provident corporis,
