--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -42,7 +42,7 @@
                      href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
                      rel="nofollow"
                      target="_blank"
-                     >Learn Bootstrap 5</a
+                     >Our Products</a
                     >
                 </li>
                 <li class="nav-item">
@@ -50,7 +50,7 @@
                      class="nav-link"
                      href="https://mdbootstrap.com/docs/standard/"
                      target="_blank"
-                     >Download MDB UI KIT</a
+                     >About us</a
                     >
                 </li>
               </ul>
@@ -108,7 +108,7 @@
              id="intro"
              class="bg-image"
              style="
-                    background-image: url(https://mdbcdn.b-cdn.net/img/new/fluid/city/113.jpg);
+                    background-image: url(https://img.freepik.com/free-photo/flavored-condiments-black-table-with-copy-space_23-2148285381.jpg?t=st=1735572816~exp=1735576416~hmac=37d428f23dd3741cbf07317711738ebc49e2527c0b4a15d1ccbc39ba28e11c7d&w=1060);
                     height: 100vh;
                     "
              >
