--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -32,6 +32,14 @@
               </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarExample01">
+              <!--color of mouse over was changed-->
+              <style>
+                .nav-link:hover {
+                  color: #ff6347; 
+                  
+                }
+              </style>
+
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
                   <a class="nav-link" aria-current="page" href="#intro">Home</a>
