--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -124,15 +124,14 @@
         <!-- Background image -->
 
         <style>
-          .bg-image{
-
+  
+          .bk-img{
             position: sticky;
-            top:0;
-
+                top:0;
           }
         </style>
-        <div
-             id="intro"
+        <div>
+             <!--id="intro"
              class="bg-image"
              style="
                     background-image: url(https://img.freepik.com/free-photo/flavored-condiments-black-table-with-copy-space_23-2148285381.jpg?t=st=1735572816~exp=1735576416~hmac=37d428f23dd3741cbf07317711738ebc49e2527c0b4a15d1ccbc39ba28e11c7d&w=1060);
@@ -142,7 +141,11 @@
                     background-size: cover;
                     
                     "
-             >
+             >  -->
+             <div>
+              <img class="bk-img" src="https://img.freepik.com/free-photo/flavored-condiments-black-table-with-copy-space_23-2148285381.jpg?t=st=1735572816~exp=1735576416~hmac=37d428f23dd3741cbf07317711738ebc49e2527c0b4a15d1ccbc39ba28e11c7d&w=1060" alt="">
+             </div>
+
           <div class="mask text-white" style="background-color: rgba(0, 0, 0, 0.8)">
             <div class="container d-flex align-items-center text-center h-100">
               <div>
