--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -44,7 +44,7 @@
                 }
 
                 .navbar-collapse {
-                  background-color: black;
+                  background-color: rgb(0, 0, 0);
                   width:100%;
                   border-radius: 10px;
                 }
@@ -57,7 +57,7 @@
                 <li class="nav-item">
                   <a
                      class="nav-link"
-                     href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
+                     href="products.html"
                      rel="nofollow"
                      target="_blank"
                      >Our Products</a
@@ -87,7 +87,7 @@
                 .logo{
                   height: 100px;
                   width: 150px;
-                  align-content: center;
+                  
                 }
 
               </style>
