--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -97,7 +97,7 @@
                 <li class="nav-item">
                   <a
                      class="nav-link"
-                     href=""
+                     href="contact.html"
                      
                      >Contact Us</a
                     >
@@ -185,10 +185,7 @@
               <div>
                 <h1 class="mb-5">Cinamona</h1>
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis molestiae
-                  laboriosam numquam expedita ullam saepe ipsam, deserunt provident corporis,
-                  sit non accusamus maxime, magni nulla quasi iste ipsa architecto? Autem!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illo et corporis sit blanditiis, quaerat expedita velit modi earum possimus, facilis ut eos at dolorum, qui doloribus maiores vel ab?
+                  Cinnamona Cinnamon Products Pvt Ltd is a purveyor of exquisite cinnamon experiences, dedicated to sourcing and delivering the highest quality cinnamon products. From aromatic powders to innovative blends, we offer a diverse range of options to enhance your culinary creations and elevate your everyday life. We are passionate about sharing the warmth and flavor of cinnamon with the world, inviting you to embark on a journey of sensory delight with Cinnamona. 
                 </p>
               </div>
             </div>
