--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -69,6 +69,7 @@
                       margin: auto;
                       padding: 12px;
                       padding-left: 4px;
+                      margin: 0 auto;
                       
                     }
       
