--- a/cinnamon/products.html
+++ b/cinnamon/products.html
@@ -118,7 +118,7 @@
                   <i class="fab fa-youtube"></i>
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item dark">
                 <a
                    class="nav-link px-2"
                    href="https://www.facebook.com/mdbootstrap"
