--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -46,7 +46,7 @@
                 }
 
                 .navbar-collapse {
-                  background-color: rgb(255,255,255);
+                  background-color: rgb(131, 126, 126);
                   width:100%;
                   border-radius: 10px;
                 }
