--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -46,7 +46,7 @@
                 }
 
                 .navbar-collapse {
-                  background-color: rgba(131, 126, 126,0.9);
+                  background-color: rgba(139, 183, 157, 0.9);
                   width:100%;
                   border-radius: 10px;
                 } 
