--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -35,7 +35,7 @@
               <!--color of mouse over was changed-->
               <style>
                 .nav-link:hover {
-                  color: #0ac439; 
+                  color: #4de838; 
                   size: 20px                  
                 }
 
@@ -46,7 +46,7 @@
                 }
 
                 .navbar-collapse {
-                  background-color: rgba(139, 183, 157, 0.9);
+                  background-color: rgba(97, 116, 105, 0.9);
                   width:100%;
                   border-radius: 10px;
                 } 
@@ -80,7 +80,7 @@
                 <li class="nav-item align-self-center">
                   <a
                      class="nav-link "
-                     href="products.html"
+                     href="product.html"
                      rel="nofollow"
                      
                      >Our Products</a
