--- a/cinnamon/order.html
+++ b/cinnamon/order.html
@@ -4,42 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Management</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid black; padding: 10px; text-align: left; }
-        th { background-color: #f2f2f2; }
-        form { margin-top: 20px; }
-        input, button { padding: 8px; margin: 5px; }
-    </style>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
-<body>
+<body class="bg-light">
 
-    <h2>Order Management</h2>
+    <div class="container mt-4">
+        <h2 class="text-center mb-4">Order Management</h2>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Customer Name</th>
-                <th>Address</th>
-                <th>Order Amount</th>
-            </tr>
-        </thead>
-        <tbody id="ordersTable"></tbody>
-    </table>
+        <!-- Order Table -->
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Customer Name</th>
+                        <th>Address</th>
+                        <th>Order Amount</th>
+                    </tr>
+                </thead>
+                <tbody id="ordersTable"></tbody>
+            </table>
+        </div>
 
-    <h3>Add New Order</h3>
-    <form id="orderForm">
-        <input type="text" id="customerName" placeholder="Customer Name" required>
-        <input type="text" id="customerAddress" placeholder="Address" required>
-        <input type="number" id="orderAmount" placeholder="Amount" required>
-        <button type="submit">Add Order</button>
-    </form>
+        <!-- Add New Order Form -->
+        <h3 class="mt-4">Add New Order</h3>
+        <form id="orderForm" class="row g-3">
+            <div class="col-md-4">
+                <input type="text" id="customerName" class="form-control" placeholder="Customer Name" required>
+            </div>
+            <div class="col-md-4">
+                <input type="text" id="customerAddress" class="form-control" placeholder="Address" required>
+            </div>
+            <div class="col-md-4">
+                <input type="number" id="orderAmount" class="form-control" placeholder="Amount" required>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary w-100">Add Order</button>
+            </div>
+        </form>
+    </div>
 
+    <!-- Bootstrap JS & Dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="order.js"></script>
-       
-    
 
 </body>
 </html>
