--- a/cinnamon/product.html
+++ b/cinnamon/product.html
@@ -214,7 +214,7 @@
                                         <p class="card-text">${product.description}</p>
                                         <p class="card-text"><strong>Price:</strong> $${product.price}</p>
                                         <p class="card-text"><strong>Stock:</strong> ${product.stockQuantity} available</p>
-                                        <a href="#" class="btn btn-success">Add to Cart</a>
+                                        <a href="order.html""  class="btn btn-success">Add to Cart</a>
                                     </div>
                                 </div>
                             </div>
