--- a/cinnamon/Dash.html
+++ b/cinnamon/Dash.html
@@ -170,10 +170,13 @@
                       position: absolute; 
                       z-index: -1;"  >                    
                      
-                      <div style="height: 150px;"></div>
+                      <div style="height: 190px;"></div>
                       <div >
                         <div class=" text-light col-md-6 float-md-start mb-3 ms-md-3">
-                        <p class="text float-start " style="font-family: Felix Titling; font-size:60px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);"> hello world <br> create your own cinnamon tea <br> shop us now! </p>
+                          <p class="text float-start "
+                             style="font-family: Felix Titling; font-size:60px; text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);">
+                             Discover the Magic of Cinnamon  <br> shop us now ! 
+                          </p>
                         </div>
                       </div>
       
